Updated controller tests, added lumberyardhelpers module, added views

--- a/views/nonadmin_form.erb
+++ b/views/nonadmin_form.erb
@@ -6,9 +6,9 @@
   <section id="add">
      <form method="post" action="/selection">
       <p>Log time</p>
-      <input type="radio" name="nonadmin" value="1"/>
+      <input type="radio" name="option" value="1"/>
       <p>Request time report</p>
-      <input type="radio" name="nonadmin" value="2"/></br>
+      <input type="radio" name="option" value="2"/></br>
       <input type="submit" value="Choose"/>
     </form>
   </section>
