--- a/views/admin_form.erb
+++ b/views/admin_form.erb
@@ -6,15 +6,15 @@
 <section id="add">
      <form method="post" action="/selection">
       <p>Log time</p>
-      <input type="radio" name="admin" value="1"/>
+      <input type="radio" name="option" value="1"/>
       <p>Request time report</p>
-      <input type="radio" name="admin" value="2"/>
+      <input type="radio" name="option" value="2"/>
       <p>Add employee</p>
-      <input type="radio" name="admin" value="3"/>
+      <input type="radio" name="option" value="3"/>
       <p>Add client</p>
-      <input type="radio" name="admin" value="4" />
+      <input type="radio" name="option" value="4" />
       <p>Request employee report</p>
-      <input type="radio" name="admin" value="5" /></br>
+      <input type="radio" name="option" value="5" /></br>
       <input type="submit" value="Choose"/>
     </form>
   </section>
