--- a/views/add_client_success.erb
+++ b/views/add_client_success.erb
@@ -7,6 +7,7 @@
         <input type="radio" name="type" value="standard"/>
       <p>Other</p>
         <input type="radio" name="type" value="other"/></br>
-  <input type="submit" class="submit-button">
+  <input type="submit" class="submit-button"></br>
+  <h3 class ="client_success">Your client has been successfully added!</h3>
 </form>
 </section>
