--- a/views/add_employee_success.erb
+++ b/views/add_employee_success.erb
@@ -8,9 +8,10 @@
   <input type="textbox" name="username"></br>
   <p>Please choose employee type.</p>
     <p>Admin</p>
-        <input type="radio" name="employee_type" value="admin"/>
+        <input type="radio" name="project" value="admin"/>
       <p>Non-Admin</p>
-        <input type="radio" name="employee_type" value="non-admin"/></br>
-  <input type="submit" class="submit-button">
+        <input type="radio" name="project" value="non-admin"/></br>
+  <input type="submit" class="submit-button"></br>
+  <h3 class ="employee_success">Your employee has been successfully added!</h3>
 </form>
 </section>
