--- a/views/billing_success.erb
+++ b/views/billing_success.erb
@@ -23,3 +23,6 @@
   <input type="submit" class="submit-button">
 </form>
 </section>
+  <h3 class ="client_success">Time has been successfully logged!</h3>
+</form>
+</section>
