--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf8">
   <title><%= @title %></title>
+  <link href="/reset.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
 </head>
 <body>
   <header>
