Updated database with data to observe the local version of app

--- a/views/add_employee_failure.erb
+++ b/views/add_employee_failure.erb
@@ -8,10 +8,10 @@
   <input type="textbox" name="username"></br>
   <p>Please choose employee type.</p>
     <p>Admin</p>
-        <input type="radio" name="project" value="admin"/>
+        <input type="radio" name="employee_type" value="admin"/>
       <p>Non-Admin</p>
-        <input type="radio" name="project" value="non-admin"/></br>
-  <input type="submit" class="submit-button"></br>
-  <h3 class ="employee_success">Your employee has been successfully added!</h3>
+        <input type="radio" name="employee_type" value="non-admin"/></br>
+  <input type="submit" class="submit-button">
+   <h3 class ="employee_success">That is not a valid employee. Please try again.</h3>
 </form>
 </section>
