Added @message param to display messages, deleted unncessary files, rearranged routes in controller, added Readme

--- a/views/billing_success.erb
+++ b/views/billing_success.erb
@@ -23,6 +23,6 @@
   <input type="submit" class="submit-button">
 </form>
 </section>
-  <h3 class ="client_success">Time has been successfully logged!</h3>
+<h3 class ="client_success"><% @message %></h3>
 </form>
 </section>
