--- a/views/add_client_success.erb
+++ b/views/add_client_success.erb
@@ -8,6 +8,6 @@
       <p>Other</p>
         <input type="radio" name="type" value="other"/></br>
   <input type="submit" class="submit-button"></br>
-  <h3 class ="client_success">Your client has been successfully added!</h3>
+  <h3 class ="client_success"><% @message %></h3>
 </form>
 </section>
