--- a/views/add_employee.erb
+++ b/views/add_employee.erb
@@ -12,5 +12,6 @@
       <p>Non-Admin</p>
         <input type="radio" name="employee_type" value="non-admin"/></br>
   <input type="submit" class="submit-button">
+  <h3 class ="client_success"><% @message %></h3>
 </form>
 </section>
