--- a/views/add_employee_success.erb
+++ b/views/add_employee_success.erb
@@ -12,6 +12,6 @@
       <p>Non-Admin</p>
         <input type="radio" name="employee_type" value="non-admin"/></br>
   <input type="submit" class="submit-button">
-   <h3 class ="employee_success">Employee successfully added!</h3>
+  <h3 class ="client_success"><% @message %></h3>
 </form>
 </section>
