--- a/views/log_time.erb
+++ b/views/log_time.erb
@@ -21,5 +21,6 @@
     <% end %>
   </select></br>
   <input type="submit" class="submit-button">
+  <h3 class ="client_success"><% @message %></h3>
 </form>
 </section>
