Removed unnecessary files, added message logic to inidividual views, updated tests.

--- a/views/billing.erb
+++ b/views/billing.erb
@@ -21,8 +21,10 @@
     <% end %>
   </select></br>
   <input type="submit" class="submit-button">
-</form>
-</section>
-<h3 class ="client_success"><% @message %></h3>
+  <% if @success == true %>
+    <h3 class ="client_success"> <%= @message %></h3>
+  <% else %>
+    <h3 class ="client_success"> <%= @message %></h3>
+  <% end %>
 </form>
 </section>
