--- a/views/add_client.erb
+++ b/views/add_client.erb
@@ -8,6 +8,10 @@
       <p>Other</p>
         <input type="radio" name="type" value="other"/></br>
   <input type="submit" class="submit-button">
-  <h3 class ="client_success"><% @message %></h3>
+  <% if @success == true %>
+    <h3 class ="client_success"> <%= @message %></h3>
+  <% else %>
+    <h3 class ="client_success"> <%= @message %></h3>
+  <% end %>
 </form>
 </section>
