--- a/views/timesheets/form.erb
+++ b/views/timesheets/form.erb
@@ -1,20 +1,19 @@
 <section id="add">
-<form action="/billing" method="post">
-  <p>Please enter your username</p>
+<form action="/timesheets/create" method="post">
+  <p><%= @options.get_message("username_prompt") %></p>
   <input type="textbox" name="username"></br>
-  <p>Please input the project date using this format : YYYY/MM/DD</p>
+  <p><%= @options.get_message("enter_date") %></p>
   <input type="textbox" name="date"></br>
-  <p>Please input the number of hours.</p>
+  <p><%= @options.get_message("enter_hours") %></p>
     <input type="textbox" name="hours"></br>
-  <p>Please input the project type.</p>
+  <p><%= @options.get_message("choose_action") %></p>
       <p>PTO</p>
         <input type="radio" name="project_type" value="pto"/>
       <p>Billable</p>
         <input type="radio" name="project_type" value="billable"/>
       <p>Non-Billable</p>
         <input type="radio" name="project_type" value="non-billable" /></br>
-
-  <p>Please choose the client name, if billable project.</p>
+  <p><%= @options.get_message("enter_client_name") %></p>
   <select class="client_options">
      <% @clients.each do |client| %>
       <option name ="client" value=<%= client.name %>><%= client.name %></option>
