Removed unnecessary references to ModelCitizen gem, moved prompts back to views instead of being passed in through controller parameter

--- a/views/client/form.erb
+++ b/views/client/form.erb
@@ -1,8 +1,8 @@
 <section id="add">
 <form action="/clients/create" method="post">
-  <p><%= @options.get_message("enter_client_name") %></p>
+  <p>Please enter client name</p>
   <input type="textbox" name="name"></br>
-  <p><%= @options.get_message("enter_client_type") %></p>
+  <p>Please enter client type</p>
     <p>Standard</p>
         <input type="radio" name="type" value="standard"/>
       <p>Other</p>
