--- a/views/all_employee_report/form.erb
+++ b/views/all_employee_report/form.erb
@@ -1,6 +1,6 @@
 <article class="welcome" >
   <% if @time_sheet.empty? %>
-  <p><%= @options.get_message("no_time_to_display") %></p>
+  <p><%= @options.get_message(:no_time_to_display) %></p>
    <% end %>
     <% @time_sheet.each do |timesheet| %>
       <p>Username: <%= timesheet.username %></p>
