--- a/views/employee/form.erb
+++ b/views/employee/form.erb
@@ -1,12 +1,12 @@
 <section id="add">
 <form action="/employees/create" method="post">
-  <p><%= @options.get_message("enter_employee_first") %></p>
+  <p>Please enter employee first name</p>
   <input type="textbox" name="first_name"></br>
-  <p><%= @options.get_message("enter_employee_last") %></p>
+  <p>Please enter employee last name</p>
   <input type="textbox" name="last_name"></br>
-  <p><%= @options.get_message("enter_employee_username") %></p>
+  <p>Please enter employee username</p>
   <input type="textbox" name="username"></br>
-  <p><%= @options.get_message("enter_employee_type") %></p>
+  <p>Please enter employee type</p>
     <p>Admin</p>
         <input type="radio" name="employee_type" value="admin"/>
       <p>Non-Admin</p>
