Added rack flash messages and sinatra redirect with flash gems, changed routes to redirect to home page with error or success message, enabled sessions and stored validated employee in session

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,10 @@ header {
     margin: 10px 0 20px;
 }
 
+.error h2 {
+    color:red;
+}
+
 header h1 {
     display: inline;
     color: midnightblue;
