--- a/views/client/form.erb
+++ b/views/client/form.erb
@@ -8,10 +8,9 @@
       <p>Other</p>
         <input type="radio" name="type" value="other"/></br>
   <input type="submit" class="submit-button">
-  <% if @success == true %>
-    <h3 class ="client_success"> <%= @message %></h3>
-  <% else %>
-    <h3 class ="client_success"> <%= @message %></h3>
+   <% if flash[:client_error] %>
+     <h2 class="error"><%= flash[:client_error] %></h2>
   <% end %>
+  <a href = '/home/index' >Home</a>
 </form>
 </section>
