--- a/views/employee/form.erb
+++ b/views/employee/form.erb
@@ -12,10 +12,9 @@
       <p>Non-Admin</p>
         <input type="radio" name="employee_type" value="non-admin"/></br>
   <input type="submit" class="submit-button">
-  <% if @success == true %>
-    <h3 class ="client_success"><%= @message %></h3>
-  <% else %>
-    <h3 class ="client_success"><%= @message %></h3>
+   <% if flash[:employee_error] %>
+     <h2 class="error"><%= flash[:employee_error] %></h2>
   <% end %>
+  <a href = '/home/index' >Home</a>
 </form>
 </section>
