--- a/views/report/form.erb
+++ b/views/report/form.erb
@@ -8,4 +8,5 @@
       <p>Hours: <%= timesheet.hours %> hours</p>
       <p>Project: <%= timesheet.project_type %></p>
   <% end %>
+   <a href = '/home/index' >Home</a>
 </article>
