--- a/public/style.css
+++ b/public/style.css
@@ -10,8 +10,12 @@ header {
     margin: 10px 0 20px;
 }
 
-.error h2 {
+.error {
     color:red;
+}
+
+.notice {
+    color: green;
 }
 
 header h1 {
