Mocked out session methods, added private method to set session variables to be used in views, fixed select drop down bug

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,13 @@
   <article class="welcome" >
-    <% if session[:employee] %>
-       <p>Welcome, <%=session[:employee].first_name %></p>
+    <% if session[:employee_first_name] %>
+       <p>Welcome, <%=session[:employee_first_name] %></p>
     <% end %>
     <p>Please select what you'd like to do</p>
   </article>
   </br>
   <section id="add">
     <form method="" action="/selection">
-      <% if session[:employee].employee_type == 'admin' %>
+      <% if session[:employee_type] == 'admin' %>
         <a href = '/timesheets/new'>Log time</a>
         </br>
         <a href = '/report/show'>Request report</a>
