--- a/views/timesheets/form.erb
+++ b/views/timesheets/form.erb
@@ -12,9 +12,9 @@
       <p>Non-Billable</p>
         <input type="radio" name="project_type" value="non-billable" /></br>
   <p>Please enter client if project is billable</p>
-  <select class="client_options">b
+  <select id="client_options" name ="client">
      <% @clients.each do |client| %>
-      <option name ="client" value=<%= client.name %>><%= client.name %></option>
+      <option value="<%= client.name %>"><%= client.name %></option>
     <% end %>
   </select></br>
   <input type="submit" class="submit-button">
