--- a/views/all_employee_report/form.erb
+++ b/views/all_employee_report/form.erb
@@ -8,5 +8,5 @@
        <br>
   <% end %>
   <br>
-   <a href = '/home/index' >Home</a>
+  <a href = '/home/index' class = "back">Home</a>
 </article>
