--- a/views/employee/form.erb
+++ b/views/employee/form.erb
@@ -7,6 +7,7 @@
   <p>Please enter employee username</p>
   <input type="textbox" name="username"></br>
   <p>Please enter employee type</p>
+  </br>
     <p>Admin</p>
         <input type="radio" name="employee_type" value="admin"/>
       <p>Non-Admin</p>
@@ -15,6 +16,7 @@
    <% if flash[:employee_error] %>
      <h2 class="error"><%= flash[:employee_error] %></h2>
   <% end %>
-  <a href = '/home/index' >Home</a>
+   </br>
+  <a href = '/home/index' class = "back">Home</a>
 </form>
 </section>
