--- a/views/all_employee_report/form.erb
+++ b/views/all_employee_report/form.erb
@@ -3,9 +3,12 @@
   <p><%= @options.get_message(:no_time_to_display) %></p>
    <% end %>
    <% @time_sheet.each do |timesheet| %>
-      <p>Username: <%= timesheet.username %> || Project date: <%= timesheet.date %> </p>
-      <p>Hours: <%= timesheet.hours %> hours || Project: <%= timesheet.project_type %></p>
-       <br>
+      <p>Username: <%= timesheet.username %> | Project date: <%= timesheet.date %> </p>
+      <p>Hours: <%= timesheet.hours %> hours | Project: <%= timesheet.project_type %></p>
+      <% if timesheet.project_type == "billable" %>
+        <p>Client: <%= timesheet.client %></p>
+      <% end %>
+      <br>
   <% end %>
   <br>
   <a href = '/home/index' class = "back">Home</a>
