Fixed username/validate route, standardized clients/new with /client route, etc

--- a/views/client/form.erb
+++ b/views/client/form.erb
@@ -1,5 +1,5 @@
 <section id="add">
-<form action="/clients/create" method="post">
+<form action="/clients" method="post">
   <p>Please enter client name</p>
   <input type="textbox" name="name"></br>
   <p>Please enter client type</p>
