--- a/views/employee/form.erb
+++ b/views/employee/form.erb
@@ -1,5 +1,5 @@
 <section id="add">
-<form action="/employees/create" method="post">
+<form action="/employees" method="post">
   <p>Please enter employee first name</p>
   <input type="textbox" name="first_name"></br>
   <p>Please enter employee last name</p>
