--- a/views/timesheets/form.erb
+++ b/views/timesheets/form.erb
@@ -1,5 +1,5 @@
 <section id="add">
-<form action="/timesheets/create" method="post">
+<form action="/timesheets" method="post">
   <p>Please input the project date using this format : YYYY/MM/DD</p>
   <input type="textbox" name="date"></br>
   <p>Please input hours worked</p>
