--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
 <section id="add">
 <h2 class="username_prompt">Please enter a valid username to get started</h2>
-<form action="/username/validate" method="post">
+<form action="/username" method="post">
   <input type="textbox" name="username_name"></br>
   <input type="submit" class="submit-button">
   </br>
