Updated routes, changed method names

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
          </br>
         <a href = '/clients/new'>Add client</a>
          </br>
-        <a href = '/all_employee_report'>Request employee report</a>
+        <a href = '/reports/all_employees'>Request employee report</a>
         </br>
       <% else %>
         <a href = '/timesheets/new'>Log time</a>
