--- a/views/report/form.erb
+++ b/views/report/form.erb
@@ -11,5 +11,5 @@
       <br>
   <% end %>
   <br>
-   <a href = '/home/index' class = "back">Home</a>
+   <a href = '/login' class = "back">Home</a>
 </article>
