--- a/views/timesheets/form.erb
+++ b/views/timesheets/form.erb
@@ -25,6 +25,6 @@
   <% end %>
   </br>
   </br>
-   <a href = '/home/index' class = "back">Home</a>
+   <a href = '/login' class = "back">Home</a>
 </form>
 </section>
