--- a/views/client/form.erb
+++ b/views/client/form.erb
@@ -15,6 +15,6 @@
   <% end %>
     </br>
   </br>
-  <a href = '/home/index' class = "back">Home</a>
+  <a href = '/login' class = "back">Home</a>
 </form>
 </section>
