--- a/views/employee/form.erb
+++ b/views/employee/form.erb
@@ -19,6 +19,6 @@
   <% end %>
    </br>
   </br>
-  <a href = '/home/index' class = "back">Home</a>
+  <a href = '/login' class = "back">Home</a>
 </form>
 </section>
